deployment/product-review-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-review-service
  labels:
    app: product-review
spec:
  selector:
    app: product-review
  ports:
  - port: 80
    targetPort: 8094
    protocol: TCP
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-review
  labels:
    app: product-review
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-review
  template:
    metadata:
      labels:
        app: product-review
    spec:
      containers:
      - name: product-review
        image: "asia-south1-docker.pkg.dev/amcart-337701/amcart/product-review:SHORT_SHA_VAR"
        imagePullPolicy: Always
        ports:
        - containerPort: 8094
        readinessProbe:
          httpGet:
            path: /api/v1/reviews/healthz
            port: 8094
