deployment/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amcart-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/reviews/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-review-service
                port: 
                  number: 80
